k8s/adv-it/adv-it-Lesson-11-Ingress/ingress-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  labels:
    app: ingress-first
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  # ingressClassName: ingress-example
  rules:
    - host: www.test.loc
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: main
                port: 
                  number: 80

    - host: web1.test.loc
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web1
                port: 
                  number: 80
    - host: web2.test.loc
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web2
                port: 
                  number: 80
    - host: tomcat.test.loc
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: tomcat
                port: 
                  number: 8080
